Fixed overflowing text

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,6 +55,8 @@ nmd-flash {
 		padding: .6em 0;
 		flex-grow: 1;
 		margin: 0 .6em;
+		overflow-wrap: break-word;
+		overflow: hidden;
 	}
 
 	&[dismissed] {
